--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -40,14 +40,25 @@ body {
   border-radius: 6px;
 }
 
-.input {
+/* .input {
   width: 100%;
   padding: 12px;
   background: #2e2a2a;
   border: 1px solid #444;
   border-radius: 8px;
   color: white;
+} */
+ .input {
+  width: 100%;
+  max-width: 100%;
+  padding: 12px;
+  background: #2e2a2a;
+  border: 1px solid #444;
+  border-radius: 8px;
+  color: white;
+  box-sizing: border-box; /* FIX overflow */
 }
+
 
 .token-box {
   margin-top: 20px;
